// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_renderDensityChart should render an histogram bar 1`] = `
Array [
  <rect
    dataindex={0}
    height={10}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    width={10}
    x={1}
    y={1}
  />,
]
`;

exports[`render does a baseline render 1`] = `
<Histogram
  barOptions={
    Object {
      "margin": 1,
    }
  }
  data={
    Array [
      Object {
        "timestamp": 1534164400000,
        "total": 0,
      },
      Object {
        "timestamp": 1533704702305,
        "total": 0.8414709848078965,
      },
      Object {
        "timestamp": 1533580546837,
        "total": 0.9092974268256817,
      },
      Object {
        "timestamp": 1534154392497,
        "total": 0.1411200080598672,
      },
      Object {
        "timestamp": 1533818043621,
        "total": 0.7568024953079282,
      },
      Object {
        "timestamp": 1533448062185,
        "total": 0.9589242746631385,
      },
      Object {
        "timestamp": 1534124570286,
        "total": 0.27941549819892586,
      },
      Object {
        "timestamp": 1533918302254,
        "total": 0.6569865987187891,
      },
      Object {
        "timestamp": 1533309900034,
        "total": 0.9893582466233818,
      },
      Object {
        "timestamp": 1534075530262,
        "total": 0.4121184852417566,
      },
    ]
  }
  defaultBarCount={18}
  height={150}
  minZoomUnit={1000}
  onIntervalChange={[MockFunction]}
  padding={10}
  renderPlayButton={true}
  size={
    Object {
      "width": 1000,
    }
  }
  spaceBetweenCharts={10}
  tooltipBarCustomization={[Function]}
  xAccessor={[Function]}
  xAxisFormatter={[Function]}
  yAccessor={[Function]}
  yAxisFormatter={[Function]}
  yAxisTicks={3}
>
  <div
    className="fdz-css-graph-histogram"
  >
    <svg
      className="fdz-js-graph-histogram fdz-css-graph-histogram-chart"
      height={120}
      style={
        Object {
          "marginBottom": 10,
        }
      }
      width={1000}
    >
      <g
        className="fdz-css-graph-histogram-bars"
      >
        <rect
          dataindex={0}
          height={10}
          key="histogram-bin-1533294000000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={1}
          height={10}
          key="histogram-bin-1533337200000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={2}
          height={10}
          key="histogram-bin-1533380400000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={3}
          height={10}
          key="histogram-bin-1533423600000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={4}
          height={10}
          key="histogram-bin-1533466800000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={5}
          height={10}
          key="histogram-bin-1533510000000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={6}
          height={10}
          key="histogram-bin-1533553200000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={7}
          height={10}
          key="histogram-bin-1533596400000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={8}
          height={10}
          key="histogram-bin-1533639600000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={9}
          height={10}
          key="histogram-bin-1533682800000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={10}
          height={10}
          key="histogram-bin-1533726000000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={11}
          height={10}
          key="histogram-bin-1533769200000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={12}
          height={10}
          key="histogram-bin-1533812400000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={13}
          height={10}
          key="histogram-bin-1533855600000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={14}
          height={10}
          key="histogram-bin-1533898800000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={15}
          height={10}
          key="histogram-bin-1533942000000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={16}
          height={10}
          key="histogram-bin-1533985200000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={17}
          height={10}
          key="histogram-bin-1534028400000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={18}
          height={10}
          key="histogram-bin-1534071600000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={19}
          height={10}
          key="histogram-bin-1534114800000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={20}
          height={10}
          key="histogram-bin-1534158000000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={21}
          height={10}
          key="histogram-bin-1534201200000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
      </g>
      <g
        className="fdz-js-graph-histogram-axis-x fdz-css-graph-histogram-axis-x"
        transform="translate(0, 102)"
      />
      <g
        className="fdz-js-graph-histogram-axis-y fdz-css-graph-histogram-axis-y"
        transform="translate(3, 3)"
      />
    </svg>
    <DensityChart
      brushDensityChartColor="rgba(33, 150, 243, 0.2)"
      brushDensityChartFadedColor="rgba(176, 190, 197, 0.2)"
      brushDomainMax={1534164400001}
      brushDomainMin={1533309900034}
      data={
        Array [
          Object {
            "timestamp": 1534164400000,
            "total": 0,
          },
          Object {
            "timestamp": 1533704702305,
            "total": 0.8414709848078965,
          },
          Object {
            "timestamp": 1533580546837,
            "total": 0.9092974268256817,
          },
          Object {
            "timestamp": 1534154392497,
            "total": 0.1411200080598672,
          },
          Object {
            "timestamp": 1533818043621,
            "total": 0.7568024953079282,
          },
          Object {
            "timestamp": 1533448062185,
            "total": 0.9589242746631385,
          },
          Object {
            "timestamp": 1534124570286,
            "total": 0.27941549819892586,
          },
          Object {
            "timestamp": 1533918302254,
            "total": 0.6569865987187891,
          },
          Object {
            "timestamp": 1533309900034,
            "total": 0.9893582466233818,
          },
          Object {
            "timestamp": 1534075530262,
            "total": 0.4121184852417566,
          },
        ]
      }
      densityChartXScale={[Function]}
      height={20}
      onDomainChanged={[Function]}
      padding={10}
      renderPlayButton={true}
      spaceBetweenCharts={10}
      timeDomainMax={1534164400001}
      width={940}
      xAccessor={[Function]}
    >
      <div
        className="fdz-css-graph-histogram-density__wrapper"
      >
        <PlayButton
          brushDomainMax={1534164400001}
          brushDomainMin={1533309900034}
          densityChartXScale={[Function]}
          frameDelay={500}
          frameStep={0.025}
          moveBrush={[Function]}
          width={940}
        >
          <button
            className="ant-btn fdz-css-play-btn ant-btn-icon-only"
            onClick={[Function]}
            type="button"
          >
            <i
              className="anticon anticon-play-circle"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 
    0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M719.4 499.1l-296.1-215A15.9 15.9 0 0 0 398 297v430c0 13.1 14.8 20.5 25.3 12.9l296.1-215a15.9 
    15.9 0 0 0 0-25.8zm-257.6 134V390.9L628.5 512 461.8 633.1z"
                />
              </svg>
            </i>
          </button>
        </PlayButton>
        <div
          className="fdz-css-graph-histogram-density"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <canvas
            aria-label="Density Chart"
            className="fdz-css-graph-histogram-density__canvas"
            height={20}
            style={
              Object {
                "left": 0,
              }
            }
            width={940}
          />
          <svg
            alt="Density Chart Brush"
            className="fdz-css-graph-histogram-brush"
            height={20}
            style={
              Object {
                "left": 0,
                "position": "absolute",
                "top": 0,
              }
            }
            width={940}
          />
        </div>
      </div>
    </DensityChart>
  </div>
</Histogram>
`;

exports[`render renders an empty chart if no data is passed 1`] = `
<Histogram
  barOptions={
    Object {
      "margin": 1,
    }
  }
  data={Array []}
  defaultBarCount={18}
  height={150}
  minZoomUnit={1000}
  onIntervalChange={[MockFunction]}
  padding={10}
  renderPlayButton={true}
  size={
    Object {
      "width": 1000,
    }
  }
  spaceBetweenCharts={10}
  tooltipBarCustomization={[Function]}
  xAccessor={[Function]}
  xAxisFormatter={[Function]}
  yAccessor={[Function]}
  yAxisFormatter={[Function]}
  yAxisTicks={3}
>
  <div
    className="fdz-css-graph-histogram"
  >
    <svg
      className="fdz-js-graph-histogram fdz-css-graph-histogram-chart"
      height={120}
      style={
        Object {
          "marginBottom": 10,
        }
      }
      width={1000}
    >
      <g
        className="fdz-css-graph-histogram-bars"
      >
        <rect
          dataindex={0}
          height={10}
          key="histogram-bin-1533294000000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={1}
          height={10}
          key="histogram-bin-1533337200000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={2}
          height={10}
          key="histogram-bin-1533380400000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={3}
          height={10}
          key="histogram-bin-1533423600000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={4}
          height={10}
          key="histogram-bin-1533466800000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={5}
          height={10}
          key="histogram-bin-1533510000000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={6}
          height={10}
          key="histogram-bin-1533553200000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={7}
          height={10}
          key="histogram-bin-1533596400000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={8}
          height={10}
          key="histogram-bin-1533639600000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={9}
          height={10}
          key="histogram-bin-1533682800000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={10}
          height={10}
          key="histogram-bin-1533726000000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={11}
          height={10}
          key="histogram-bin-1533769200000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={12}
          height={10}
          key="histogram-bin-1533812400000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={13}
          height={10}
          key="histogram-bin-1533855600000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={14}
          height={10}
          key="histogram-bin-1533898800000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={15}
          height={10}
          key="histogram-bin-1533942000000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={16}
          height={10}
          key="histogram-bin-1533985200000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={17}
          height={10}
          key="histogram-bin-1534028400000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={18}
          height={10}
          key="histogram-bin-1534071600000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={19}
          height={10}
          key="histogram-bin-1534114800000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={20}
          height={10}
          key="histogram-bin-1534158000000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
        <rect
          dataindex={21}
          height={10}
          key="histogram-bin-1534201200000"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          width={10}
          x={1}
          y={1}
        />
      </g>
      <g
        className="fdz-js-graph-histogram-axis-x fdz-css-graph-histogram-axis-x"
        transform="translate(0, 102)"
      />
      <g
        className="fdz-js-graph-histogram-axis-y fdz-css-graph-histogram-axis-y"
        transform="translate(3, 3)"
      />
    </svg>
    <DensityChart
      brushDensityChartColor="rgba(33, 150, 243, 0.2)"
      brushDensityChartFadedColor="rgba(176, 190, 197, 0.2)"
      brushDomainMax={1479427200000}
      brushDomainMin={1479427200000}
      data={Array []}
      densityChartXScale={[Function]}
      height={20}
      onDomainChanged={[Function]}
      padding={10}
      renderPlayButton={false}
      spaceBetweenCharts={10}
      timeDomainMax={1479427200000}
      width={940}
      xAccessor={[Function]}
    >
      <div
        className="fdz-css-graph-histogram-density__wrapper"
      >
        <div
          className="fdz-css-graph-histogram-density"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <canvas
            aria-label="Density Chart"
            className="fdz-css-graph-histogram-density__canvas"
            height={20}
            style={
              Object {
                "left": 20,
              }
            }
            width={940}
          />
          <svg
            alt="Density Chart Brush"
            className="fdz-css-graph-histogram-brush"
            height={20}
            style={
              Object {
                "left": 20,
                "position": "absolute",
                "top": 0,
              }
            }
            width={940}
          />
        </div>
      </div>
    </DensityChart>
  </div>
</Histogram>
`;
